fix: update order service to completion